# Smart-Study-AI-assiatant

./: # app.py  # assignment_generator.py  # image_parser.py  # quiz_generator.py  # schedule_planner.py  Dockerfile  app.py  assignment_generator.py  image_parser.py  nlp_helper.py  pdf_parser.py  pyproject.toml  quiz_generator.py  render.yaml  requirement.txt  requirements.txt  resource_finder.py  schedule_planner  schedule_planner.py
src/syllabus_helper/: curator.py
